# dezlock-dump

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  TODO.md  build.bat  generate-signatures.py  import-schema.py  main.cpp  patterns.json  sdk-cherry-pick.json  worker.cpp
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  release.yml
src/: analyze-members.cpp  analyze-members.hpp  cli.cpp  cli.hpp  console.cpp  console.hpp  generate-internal-sdk.cpp  generate-internal-sdk.hpp  generate-signatures.cpp  generate-signatures.hpp  global-scanner.cpp  global-scanner.hpp  import-schema.cpp  import-schema.hpp  injector.cpp  injector.hpp  interface-scanner.cpp  interface-scanner.hpp  live-bridge.cpp  live-bridge.hpp  log.cpp  log.hpp  output-generator.cpp  output-generator.hpp  pattern-scanner.cpp  pattern-scanner.hpp  protobuf-scanner.cpp  protobuf-scanner.hpp  rtti-hierarchy.cpp  rtti-hierarchy.hpp  safe-memory.hpp  schema-manager.cpp  schema-manager.hpp  string-scanner.cpp  string-scanner.hpp  vfunc-namer.cpp  vfunc-namer.hpp  ws-server.cpp  ws-server.hpp
viewer/: index.html  package.json  pnpm-lock.yaml
viewer/src/: app.tsx  index.css  main.tsx
viewer/src/components/entity/: column-resize-handle.tsx  entity-inspector-field.tsx  entity-inspector-pane.tsx  entity-inspector-section.tsx  entity-inspector-toolbar.tsx  entity-list-pane.tsx  entity-row.tsx  entity-search-panel.tsx  entity-sidebar-list.tsx
viewer/src/context/: entity-context.tsx  live-context.tsx  schema-context.tsx  theme-context.tsx
viewer/src/hooks/: use-hash-router.ts  use-keyboard-shortcuts.ts  use-live-client.ts  use-local-storage.ts
viewer/src/lib/: constants.ts  flat-fields.ts  format.ts  live-client.ts  parse-worker.ts  recent-files.ts  search.ts
viewer/src/types/: entity.ts  live.ts  schema.ts
(+43 files in other folders)
